--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server1.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node backend/server1.js",
+    "dev": "nodemon backend/server1.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.0.0",
     "nodemon": "^2.0.20"
   }
 }
